Aggiunta di metodi di gestione + risoluzione alcuni TODO